After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732220 - Screenshot fails to start on latest gtk/glib
Screenshot fails to start on latest gtk/glib
Status: RESOLVED FIXED
Product: gnome-screenshot
Classification: Core
Component: general
unspecified
Other Linux
: Normal critical
: ---
Assigned To: gnome-screenshot-maint
gnome-screenshot-maint
Depends on:
Blocks:
 
 
Reported: 2014-06-25 10:50 UTC by Vadim Rutkovsky
Modified: 2014-06-26 18:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Implement g_application_activate() (2.19 KB, patch)
2014-06-26 17:03 UTC, Michael Catanzaro
committed Details | Review

Description Vadim Rutkovsky 2014-06-25 10:50:30 UTC
The app fails to start on latest build from build.gnome.org:

org.gnome.Screenshot: (gnome-screenshot:905): GLib-GIO-WARNING **: Your application does not implement g_application_activate() and has no handlers connected to the 'activate' signal.  It should do one of these.
Comment 1 Michael Catanzaro 2014-06-26 16:59:34 UTC
I guess we could move the creation of the app menu into activate(), or simply do nothing there.

But I can't reproduce this with the latest GTK+ and GLib.
Comment 2 Michael Catanzaro 2014-06-26 17:03:59 UTC
Created attachment 279331 [details] [review]
Implement g_application_activate()

GLib-GIO-WARNING **: Your application does not implement
g_application_activate() and has no handlers connected to
the 'activate' signal.  It should do one of these.

Also, there's no point in creating the app menu each time we want to
take a screenshot, so move that here.
Comment 3 Matthias Clasen 2014-06-26 18:32:59 UTC
Review of attachment 279331 [details] [review]:

Looks fine to me, thanks
Comment 4 Matthias Clasen 2014-06-26 18:33:13 UTC
Review of attachment 279331 [details] [review]:

Looks fine to me, thanks
Comment 5 Michael Catanzaro 2014-06-26 18:56:40 UTC
Vadim, this should fix that warning but I'm not sure if it's really to blame for your issue, so please reopen if it's still broken.

Attachment 279331 [details] pushed as 5045c39 - Implement g_application_activate()