Implement g_application_activate()

GLib-GIO-WARNING **: Your application does not implement
g_application_activate() and has no handlers connected to
the 'activate' signal.  It should do one of these.

Also, there's no point in creating the app menu each time we want to
take a screenshot, so move that here.

https://bugzilla.gnome.org/show_bug.cgi?id=732220